# HR-OS1_Gazebo_Plugin

./: CMakeLists.txt  README.md  package.xml
launch/: empty.launch  empty.launch~
msg/: hros1_all_joints_position_msgtype.msg  hros1_arm_position_msgtype.msg  hros1_leg_position_msgtype.msg  hros1_neck_position_msgtype.msg  hros1_single_servo_position_msgtype.msg
src/: default_positions.h  hros1_control.cpp  hros1_control.cpp~  hros1_servo.cpp  hros1_servo.h  joint_indices.h  servo_controller.h
worlds/: empty.world  empty.world~
